lttng: Fix maven tests on Mac
Cocoa requires the Display to be created on the main thread
so -XstartOnFirstThread needs to be specified in the VM args.
Also use -Dorg.eclipse.swt.internal.carbon.smallFonts to make it
consistent with the fonts in the SDK.

Change-Id: If695baab41a35165f2cdc1120f088b5d6ba61354
Signed-off-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>
Reviewed-on: https://git.eclipse.org/r/19888
Tested-by: Hudson CI